# Copyright (C) 2006 Trevor Highland <trevor.highland@gmail.com>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

dist_man_MANS = \
	tse.7 \
	tse-add-passphrase.1 \
	tsed.8 \
	tse-find.1 \
	tse-generate-tpm-key.1 \
	tse-insert-wrapped-passphrase-into-keyring.1 \
	tse-manager.8 \
	tse-migrate-home.8 \
	tse-mount-private.1 \
	tse-recover-private.1 \
	tse-rewrap-passphrase.1 \
	tse-rewrite-file.1 \
	tse-setup-private.1 \
	tse-setup-swap.1 \
	tse-stat.1 \
	tse-umount-private.1 \
	tse-unwrap-passphrase.1 \
	tse-verify.1 \
	tse-wrap-passphrase.1 \
	mount.tse.8 \
	umount.tse.8 \
	mount.tse_private.1 \
	pam_tse.8 \
	umount.tse_private.1
