MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

eudatarootdir = $(datarootdir)/tse-utils
dist_eudataroot_SCRIPTS = tse-record-passphrase

desktopdir = $(datarootdir)/tse-utils

desktop_in_files = \
	tse-mount-private.desktop.in \
	tse-setup-private.desktop.in

desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)

@INTLTOOL_DESKTOP_RULE@


 
